--- a/2ndnavbar/styles2.css
+++ b/2ndnavbar/styles2.css
@@ -5,20 +5,21 @@
     padding: 0%;
     text-decoration: none;
     box-sizing: border-box;
-    background-color: lightgray;
+    background-color:beige;
     list-style: none;
 }
 .logo{
     color: royalblue;
-    font-size: 20px;
+    font-size: 40px;
+    margin-right: auto;
 
 }
 .logo:hover{
-    color: slateblue;
+    color: blue;
 }
- .navbar{
+.navbar{
      display: flex;
-     justify-content: space-between;
+     justify-content: flex-end;
      align-items: center;
      padding: 20px 30px;
     
@@ -35,6 +36,9 @@
 }
 .nav-links li:hover{
     color:royalblue
+}
+.cont-btn{
+    margin-left: 10px;
 }
  
 
